@@ -1,14 +1,14 @@
 ﻿
 Microsoft Visual Studio Solution File, Format Version 10.00
 # Visual Studio 2008
-Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "IL", "..\..\src-IL\msvc\IL.vcproj", "{B46B180B-6079-4CE6-8647-A7D712774255}"
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "IL", "..\..\src-IL\msvc9\IL.vcproj", "{B46B180B-6079-4CE6-8647-A7D712774255}"
 EndProject
-Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "ILU", "..\..\src-ILU\msvc\ILU.vcproj", "{CCEBAA77-521A-4CC3-A4E0-C6B062FC2009}"
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "ILU", "..\..\src-ILU\msvc9\ILU.vcproj", "{CCEBAA77-521A-4CC3-A4E0-C6B062FC2009}"
 	ProjectSection(ProjectDependencies) = postProject
 		{B46B180B-6079-4CE6-8647-A7D712774255} = {B46B180B-6079-4CE6-8647-A7D712774255}
 	EndProjectSection
 EndProject
-Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "ILUT", "..\..\src-ILUT\msvc\ILUT.vcproj", "{7D060DA4-F2FA-44CC-80BE-065024DD6CA9}"
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "ILUT", "..\..\src-ILUT\msvc9\ILUT.vcproj", "{7D060DA4-F2FA-44CC-80BE-065024DD6CA9}"
 	ProjectSection(ProjectDependencies) = postProject
 		{B46B180B-6079-4CE6-8647-A7D712774255} = {B46B180B-6079-4CE6-8647-A7D712774255}
 		{CCEBAA77-521A-4CC3-A4E0-C6B062FC2009} = {CCEBAA77-521A-4CC3-A4E0-C6B062FC2009}
