@@ -2,5 +2,5 @@ SUBDIRS = src include
 DIST_SUBDIRS = src include
 
 dist-hook:
-	cp -Rf "msvc"      $(distdir)
+	cp -Rf "msvc9"      $(distdir)
 	find $(distdir) -name CVS -type d | xargs rm -rf
