@@ -12,7 +12,7 @@ libIL_la_SOURCES = il_alloc.c     il_doom.c      il_stack.c    il_pcx.c        i
                    il_neuquant.c  il_dds-save.c  il_psp.c      il_pix.c        il_pxr.c \
                    il_xpm.c       il_hdr.c       il_icns.c     il_jp2.c        il_vtf.c \
                    il_wbmp.c      il_exr.cpp     il_nvidia.cpp il_squish.cpp   il_iff.c \
-                   il_size.c      altivec_common.c altivec_typeconversion.c
+                   il_size.c      il_tpl.c       altivec_common.c altivec_typeconversion.c
 
 AM_CFLAGS = @LIBIL_CFLAGS@
 libIL_la_LDFLAGS = @WIN32_EXTRA_LDFLAGS@ @VERSIONINFO@
